# template

./: .gitmodules  README.md
cpp/: CMakeLists.txt  README.md  do_cmake.sh  install-deps.sh
cpp/include/: libaio.h
cpp/include/uuid/: uuid.h
cpp/src/: CMakeLists.txt
cpp/src/common/: uuid.c  uuid.h
